02_Firmware/02_STM32/.metadata/.plugins/org.eclipse.cdt.ui/Radio_main.build.log
21:15:04 **** Incremental Build of configuration Debug for project Radio_main ****
make -j16 all 
arm-none-eabi-g++ "../Core/Src/SileliS_code/List.cpp" -mcpu=cortex-m7 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H7A3xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I"D:/!!!__GitHUB_repositories/MustangRadio_develepementVersion/02_Firmware/03_Common" -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/SileliS_code/List.d" -MT"Core/Src/SileliS_code/List.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/SileliS_code/List.o"
../Core/Src/SileliS_code/List.cpp: In member function 'void List::printList() const':
../Core/Src/SileliS_code/List.cpp:120:14: error: 'cout' is not a member of 'std'
  120 |         std::cout << "Node Index: " << (int)temp->index << ", Name: " << (temp->name ? temp->name : "Unnamed") << std::endl;
      |              ^~~~
../Core/Src/SileliS_code/List.cpp:2:1: note: 'std::cout' is defined in header '<iostream>'; did you forget to '#include <iostream>'?
    1 | #include "SileliS_code/List.h"
  +++ |+#include <iostream>
    2 | 
../Core/Src/SileliS_code/List.cpp:120:120: error: 'endl' is not a member of 'std'
  120 |         std::cout << "Node Index: " << (int)temp->index << ", Name: " << (temp->name ? temp->name : "Unnamed") << std::endl;
      |                                                                                                                        ^~~~
../Core/Src/SileliS_code/List.cpp:2:1: note: 'std::endl' is defined in header '<ostream>'; did you forget to '#include <ostream>'?
    1 | #include "SileliS_code/List.h"
  +++ |+#include <ostream>
    2 | 
../Core/Src/SileliS_code/List.cpp: In member function 'void List::printCurrent() const':
../Core/Src/SileliS_code/List.cpp:128:14: error: 'cout' is not a member of 'std'
  128 |         std::cout << "Current Node Index: " << (int)current->index << ", Name: " << (current->name ? current->name : "Unnamed") << std::endl;
      |              ^~~~
../Core/Src/SileliS_code/List.cpp:128:14: note: 'std::cout' is defined in header '<iostream>'; did you forget to '#include <iostream>'?
../Core/Src/SileliS_code/List.cpp:128:137: error: 'endl' is not a member of 'std'
  128 |         std::cout << "Current Node Index: " << (int)current->index << ", Name: " << (current->name ? current->name : "Unnamed") << std::endl;
      |                                                                                                                                         ^~~~
../Core/Src/SileliS_code/List.cpp:128:137: note: 'std::endl' is defined in header '<ostream>'; did you forget to '#include <ostream>'?
../Core/Src/SileliS_code/List.cpp:130:14: error: 'cout' is not a member of 'std'
  130 |         std::cout << "No current node." << std::endl;
      |              ^~~~
../Core/Src/SileliS_code/List.cpp:130:14: note: 'std::cout' is defined in header '<iostream>'; did you forget to '#include <iostream>'?
../Core/Src/SileliS_code/List.cpp:130:49: error: 'endl' is not a member of 'std'
  130 |         std::cout << "No current node." << std::endl;
      |                                                 ^~~~
../Core/Src/SileliS_code/List.cpp:130:49: note: 'std::endl' is defined in header '<ostream>'; did you forget to '#include <ostream>'?
make: *** [Core/Src/SileliS_code/subdir.mk:44: Core/Src/SileliS_code/List.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

21:15:04 Build Failed. 7 errors, 0 warnings. (took 513ms)

